# DroidCortex

./: .env.example  .gitignore  README.md
backend/: __init__.py  config.py  main.py  pyproject.toml
backend/api/: apks.py  config.py  devices.py  test_runs.py  websocket.py
backend/engine/: ai_executor.py  orchestrator.py  rule_executor.py
backend/models/: database.py  schemas.py
backend/services/: adb_service.py  device_manager.py  llm_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  socket.ts
frontend/src/pages/: CommandConsolePage.tsx  DevicesPage.tsx  NewTestRunPage.tsx  SettingsPage.tsx  TestRunDetailPage.tsx  TestRunsPage.tsx
test_scripts/: ai_exploratory.yaml  login_test.json  smoke_test.yaml
