[project]
name = "droidcortex"
version = "0.1.0"
description = "Android APK Test Orchestration Platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-socketio>=5.11.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.25",
    "adbutils>=2.2.0",
    "redis>=5.0.0",
    "rq>=1.16.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.4.0",
    "Pillow>=10.2.0",
    "structlog>=24.1.0",
    "aiofiles>=23.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
